namespace ProductCatalog.Domain.Entities;

public enum ProductStatus
{
    Active = 0,
    Inactive = 1,
    Archived = 2
}
